p7/tests/t090.gpl
rectangle rects[3];

on akey
{
    rects[4.2].x = 4.2;
}
